prod/jobs-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-executor
  labels:
    app: nuvla
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-executor
  template:
    metadata:
      labels:
        app: job-executor
      annotations:
        description: Nuvla job executor
        tags: job
    spec:
      restartPolicy: Always
      containers:
        - name: job-executor
          image: nuvla/job:2.3.12
          command:
            - /app/job_executor.py
          args:
            - --api-url=http://api:8200
            - --api-authn-header=group/nuvla-admin
            - --zk-hosts=zk:2181
            - --es-hosts=es
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobd-jobs-cleanup
  labels:
    app: nuvla
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobd-jobs-cleanup
  template:
    metadata:
      labels:
        app: jobd-jobs-cleanup
      annotations:
        description: Nuvla jobs cleanup
        tags: job
    spec:
      restartPolicy: Always
      containers:
        - name: jobd-jobs-cleanup
          image: nuvla/job:2.3.12
          command:
            - /app/job_distributor_jobs_cleanup.py
          args:
            - --api-url=http://api:8200
            - --api-authn-header=group/nuvla-admin
            - --zk-hosts=zk:2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobd-deployment-state
  labels:
    app: nuvla
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobd-deployment-state
  template:
    metadata:
      labels:
        app: jobd-deployment-state
      annotations:
        description: Nuvla deployment state job
        tags: job
    spec:
      restartPolicy: Always
      containers:
        - name: jobd-deployment-state
          image: nuvla/job:2.3.12
          command:
            - /app/job_distributor_deployment_state.py
          args:
            - --api-url=http://api:8200
            - --api-authn-header=group/nuvla-admin
            - --zk-hosts=zk:2181
            - --interval=10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobd-comp-image-state
  labels:
    app: nuvla
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobd-comp-image-state
  template:
    metadata:
      labels:
        app: jobd-comp-image-state
      annotations:
        description: Nuvla component image state job
        tags: job
    spec:
      restartPolicy: Always
      containers:
        - name: jobd-comp-image-state
          image: nuvla/job:2.3.12
          command:
            - /app/job_distributor_component_image_state.py
          args:
            - --api-url=http://api:8200
            - --api-authn-header=group/nuvla-admin
            - --zk-hosts=zk:2181
            - --interval=3600
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobd-srvc-image-state
  labels:
    app: nuvla
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobd-srvc-image-state
  template:
    metadata:
      labels:
        app: jobd-srvc-image-state
      annotations:
        description: Nuvla service image state job
        tags: job
    spec:
      restartPolicy: Always
      containers:
        - name: jobd-srvc-image-state
          image: nuvla/job:2.3.12
          command:
            - /app/job_distributor_service_image_state.py
          args:
            - --api-url=http://api:8200
            - --api-authn-header=group/nuvla-admin
            - --zk-hosts=zk:2181
            - --interval=3600
