prod/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: nuvla
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      annotations:
        description: Nuvla API service
        tags: api
    spec:
      restartPolicy: Always
      containers:
        - name: api
          image: nuvla/api:4.2.11
          ports:
            - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: nuvla
spec:
  ports:
    - port: 8200
      targetPort: 8200
  selector:
    app: api
