prod/api-service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-nodeport
  labels:
    app: nuvla
spec:
  type: NodePort
  ports:
    - port: 8200
      targetPort: 8200
      nodePort: 7777
  selector:
    app: api
