prod/es-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  labels:
    app: es
spec:
  selector:
    matchLabels:
      app: es
  template:
    metadata:
      labels:
        app: es
      annotations:
        description: Elasticsearch for Nuvla
        tags: db
    spec:
      restartPolicy: Always
      containers:
        - name: es
          image: nuvla/es:7.0.0.0
          ports:
            - containerPort: 9200
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: es-data
      volumes:
        - name: es-data
          persistentVolumeClaim:
            claimName: es-data
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: es
  labels:
    app: nuvla
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: es
