prod/ui-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: nuvla
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
      annotations:
        description: Nuvla UI static content
        tags: ui
    spec:
      restartPolicy: Always
      containers:
        - name: ui
          image: nuvla/ui:2.4.10
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: nuvla
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: ui
