prod/ui-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service-nodeport
  labels:
    app: nuvla
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 7780
  selector:
    app: ui
