prod/traefik-ingress.yaml
# For v1.14+
apiVersion: networking.k8s.io/v1beta1
# For v1.12 and v1.13
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nuvla
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/custom-request-headers: "nuvla-authn-info:"
spec:
  tls:
    - secretName: traefik-tls-cert
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: api
              servicePort: 8200
          - path: /ui
            backend:
              serviceName: ui
              servicePort: 80
          - path: /
            backend:
              serviceName: ui
              servicePort: 80
